2004-09-08  Stephen J. Turnbull  <stephen@xemacs.org>

	* automated/regexp-tests.el: Add tests for bug identified by
	Katsumi Yamaoka 2004-09-03 <b9ywtzbbpue.fsf_-_@jpl.org>.

2004-05-14  Stephen J. Turnbull  <stephen@xemacs.org>

	* automated/tag-tests.el (first form): Put non-ASCII chars back.

2004-05-13  Jerry James  <james@xemacs.org>

	* automated/lisp-tests:el: Another test fix because
	(eq most-negative-fixnum (- most-negative-fixnum)).

2004-05-11  Vin Shelton  <acs@xemacs.org>

	* automated/tag-test.el: Use a temp directory to avoid conflicts
	with extra TAGS files.

2004-05-08  Vin Shelton  <acs@xemacs.org>

	* automated/tag-test.el: Created.

2004-04-21  Jerry James  <james@xemacs.org>

	* automated/test-harness.el (Assert): Add an optional failing-case
	arg so we can see what the test was trying to do when it failed.
	* automated/lisp-tests.el: Use the failing-case arg for Asserts
	with variables.  Use eql on tests that might produce bignums.  Fix
	test for non-bignum XEmacsen that fails because
	(eq most-negative-fixnum (- most-negative-fixnum)).

2004-04-19  Stephen J. Turnbull  <turnbull@sk.tsukuba.ac.jp>

	* automated/mule-tests.el: Inhibit GC to speed up BIG_STRING tests.

2004-04-19  Stephen J. Turnbull  <stephen@xemacs.org>

	* automated/mule-tests.el: Darwin doesn't like ISO 8859/2 filenames.

2004-04-05  Jerry James  <james@xemacs.org>

	* automated/lisp-tests.el: Add bignum and ratio tests.

2004-03-22  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.17 "chayote" is released.

2003-11-01  Markus Kaltenbach  <makalten@informatik.uni-tuebingen.de>

	* automated/weak-tests.el:
	Added testing of the iterative marking calls needed for processing
	weak data structures, especially ephemerons, correctly

2003-10-22  Vin Shelton  <acs@xemacs.org>

	* automated/hash-table-tests.el: Remove debugging print
	statements.

2003-10-22  Stephen J. Turnbull  <stephen@xemacs.org>

	* automated/test-harness.el: List me as maintainer.
