@@ -1,3 +1,8 @@
+2004-10-07  Stephen J. Turnbull  <stephen@xemacs.org>
+
+	* automated/regexp-tests.el: Add tests for bug identified by
+	Steve Youngs 2004-09-30 <microsoft-free.87ekkjhj7t.fsf@youngs.au.com>
+
 2004-09-08  Stephen J. Turnbull  <stephen@xemacs.org>
 
 	* automated/regexp-tests.el: Add tests for bug identified by
